--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-
+    <link rel="stylesheet" href="assets/css/swipper/swiper.min.css">
+    <link rel="stylesheet" href="assets/css/swipper/style.css">
 
     <!-----------------------------------320px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive580px/section1.css">
@@ -54,9 +55,7 @@
     <!-----------------------------------1024px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive1024px/section1.css">
     <link rel="stylesheet" href="assets/css/Responsive1024px/min.css">
-    <script src="assets/css/swipper/swiper.min.js"></script>
-    <link rel="stylesheet" href="assets/css/swipper/swiper.min.css">
-    <link rel="stylesheet" href="assets/css/swipper/style.css">
+
 
 
     <!-----------------------------------425px----------------------------------->
@@ -88,7 +87,7 @@
                 <li><a href="#home-section">Home</a></li>
                 <li><a href="#about-section"></i>About</a></li>
                 <li><a href="#expertise-section">Expertise</a></li>
-                <li><a href="#project-section">Projects</a></li>
+                <li><a href="#Achievements">Projects</a></li>
                 <li><a href="#education-section">Education</a></li>
                 <li><a href="#contact-section">Contact</a></li>
             </menu>
@@ -534,7 +533,7 @@
                     <div class="swiper-pagination"></div>
                 </div>
 
-                <script src="assets/styles/swipper/swiper.min.js"></script>
+                <script src="assets/css/swipper/swiper.min.js"></script>
                 <script>
                     var swiper = new Swiper('.swiper-container', {
                         effect: 'coverflow',
