--- a/index.html
+++ b/index.html
@@ -498,32 +498,32 @@
                                 <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Restaurant-Management-System" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project1.png)">
+                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project2.png)">
                             <div class="info">
                                 <h5>Great Learning</h5>
-                                <h5>Resturanr Management</h5>
-                                <button   style="--clr:#fac921" ><a href="#about-section">Click</a><i></i></button>
+                                <h5>Hostel Service</h5>
+                                <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/D24-Hostel" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project1.png)">
+                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project3.png)">
                             <div class="info">
                                 <h5>Great Learning</h5>
-                                <h5>Resturanr Management</h5>
-                                <button   style="--clr:#fac921" ><a href="#about-section">Click</a><i></i></button>
+                                <h5>pilisaru Management</h5>
+                                <button   style="--clr:#fac921" ><a href="https://github.com/zyko404/pilisaru" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project1.png)">
+                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project4.png)">
                             <div class="info">
                                 <h5>Sololearn</h5>
-                                <h5>Resturanr Management</h5>
-                                <button   style="--clr:#fac921" ><a href="#about-section">Click</a><i></i></button>
+                                <h5>Hibernate NativeBoost Rapping</h5>
+                                <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Hibernete_Native_Bootsrapping" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
-                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project1.png)">
+                        <div class="swiper-slide" style="background-image:url(assets/images/project/Project5.png)">
                             <div class="info">
                                 <h5>Great Learning</h5>
-                                <h5>Resturanr Management</h5>
-                                <button   style="--clr:#fac921" ><a href="#about-section">Click</a><i></i></button>
+                                <h5>Chat Application</h5>
+                                <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Chat-Application" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
 
