--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                         <div class="swiper-slide" style="background-image:url(assets/images/project/Project3.png)">
                             <div class="info">
                                 <h5>Great Learning</h5>
-                                <h5>pilisaru Management</h5>
+                                <h5>Pilisaru Management</h5>
                                 <button   style="--clr:#fac921" ><a href="https://github.com/zyko404/pilisaru" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
