--- a/index.html
+++ b/index.html
@@ -495,35 +495,35 @@
                         <div class="swiper-slide" style="background-image:url(assets/images/project/Project1.png)">
                             <div class="info">
                                 <h5>Resturanr Management</h5>
-                                <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Restaurant-Management-System" target="_blank">Click</a><i></i></button>
+                                <button class="projectBtn"  style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Restaurant-Management-System" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
                         <div class="swiper-slide" style="background-image:url(assets/images/project/Project2.png)">
                             <div class="info">
                                 <h5>Great Learning</h5>
                                 <h5>Hostel Service</h5>
-                                <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/D24-Hostel" target="_blank">Click</a><i></i></button>
+                                <button class="projectBtn"  style="--clr:#fac921" ><a href="https://github.com/lakshan-a/D24-Hostel" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
                         <div class="swiper-slide" style="background-image:url(assets/images/project/Project3.png)">
                             <div class="info">
                                 <h5>Great Learning</h5>
                                 <h5>Pilisaru Management</h5>
-                                <button   style="--clr:#fac921" ><a href="https://github.com/zyko404/pilisaru" target="_blank">Click</a><i></i></button>
+                                <button  class="projectBtn" style="--clr:#fac921" ><a href="https://github.com/zyko404/pilisaru" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
                         <div class="swiper-slide" style="background-image:url(assets/images/project/Project4.png)">
                             <div class="info">
                                 <h5>Sololearn</h5>
                                 <h5>Hibernate NativeBoost Rapping</h5>
-                                <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Hibernete_Native_Bootsrapping" target="_blank">Click</a><i></i></button>
+                                <button class="projectBtn"  style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Hibernete_Native_Bootsrapping" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
                         <div class="swiper-slide" style="background-image:url(assets/images/project/Project5.png)">
                             <div class="info">
                                 <h5>Great Learning</h5>
                                 <h5>Chat Application</h5>
-                                <button   style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Chat-Application" target="_blank">Click</a><i></i></button>
+                                <button class="projectBtn"  style="--clr:#fac921" ><a href="https://github.com/lakshan-a/Chat-Application" target="_blank">Click</a><i></i></button>
                             </div>
                         </div>
 
@@ -672,7 +672,17 @@
                             <textarea required id="message" name="area" cols="30" rows="5"></textarea>
                             <br><br>
 
-                            <button type="submit" onclick="myAlertFunc()">Send Message</button>
+                            <button class="contactBtn" type="submit" onclick="myAlertFunc()">
+                                <div class="svg-wrapper-1">
+                                    <div class="svg-wrapper">
+                                        <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M0 0h24v24H0z" fill="none"></path>
+                                            <path d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z" fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <span>Send Message</span>
+                            </button>
                         </fieldset>
 
                     </form>
