--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <link rel="stylesheet" href="assets/css/swipper/swiper.min.css">
     <link rel="stylesheet" href="assets/css/swipper/style.css">
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <!-----------------------------------320px----------------------------------->
     <link rel="stylesheet" href="assets/css/Responsive580px/section1.css">
     <link rel="stylesheet" href="assets/css/Responsive580px/section2.css">
@@ -164,7 +167,7 @@
                 software engineers have little understanding of their programming  languages</p>
 
 
-            <div class="col-md-1">
+            <div class="col-md-1" >
                 <div class="content-inner fl-wrap">
 
 
